--- a/NotariusApp/app/src/main/res/layout/main_screen.xml
+++ b/NotariusApp/app/src/main/res/layout/main_screen.xml
@@ -5,11 +5,20 @@
     android:background="#9FC5F8"
     android:orientation="vertical">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|right"
+        android:src="@drawable/settings"
+        android:id="@+id/settingImage"
+        android:padding="10dp"
+        />
+
     <LinearLayout
         android:layout_width="320dp"
         android:layout_height="160dp"
         android:layout_gravity="center"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:background="@drawable/black_rectangle"
         android:gravity="center"
         android:orientation="vertical">
@@ -51,7 +60,6 @@
                 android:textSize="18sp" />
 
         </LinearLayout>
-
 
     </LinearLayout>
 
