--- a/NotariusApp/app/src/main/res/layout/settings.xml
+++ b/NotariusApp/app/src/main/res/layout/settings.xml
@@ -62,7 +62,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:weightSum="1"
@@ -87,6 +87,7 @@
             android:textColor="@android:color/black"
             android:text="Everyday"
             android:textSize="18sp"
+            android:layout_marginLeft="10dp"
             android:gravity="center"
             android:padding="10dp"
             android:layout_gravity="center_horizontal"
@@ -101,14 +102,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="30dp"
+        android:layout_marginLeft="28dp"
         android:layout_marginTop="10dp"
         android:weightSum="1"
+        android:gravity="center"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.6"
+            android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
@@ -120,11 +122,11 @@
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.4"
+            android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
-            android:gravity="center|left"
+            android:gravity="center"
             android:padding="10dp"
             android:text="20:00 PM"
             android:textColor="@android:color/black"
