--- a/NotariusApp/app/src/main/res/layout/settings.xml
+++ b/NotariusApp/app/src/main/res/layout/settings.xml
@@ -128,6 +128,7 @@
             android:layout_marginTop="10dp"
             android:gravity="center"
             android:padding="10dp"
+            android:id="@+id/timeTv"
             android:text="20:00 PM"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
