--- a/NotariusApp/app/src/main/res/layout/workout_details.xml
+++ b/NotariusApp/app/src/main/res/layout/workout_details.xml
@@ -149,15 +149,36 @@
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/cancelBtn"
-                    android:layout_width="135dp"
-                    android:layout_height="50dp"
-                    android:layout_marginLeft="15dp"
-                    android:padding="10dp"
-                    android:text="Cancel"
-                    android:textAllCaps="false"
-                    android:textSize="20sp" />
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="15dp"
+                    android:gravity="center|left"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/cancelBtn"
+                        android:layout_width="135dp"
+                        android:layout_height="50dp"
+                        android:layout_marginLeft="15dp"
+                        android:padding="10dp"
+                        android:text="Cancel"
+                        android:textAllCaps="false"
+                        android:textSize="20sp" />
+
+                    <Button
+                        android:id="@+id/saveAndNew"
+                        android:layout_width="wrap_content"
+                        android:layout_height="50dp"
+                        android:padding="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_gravity="center"
+                        android:text="@string/save_new"
+                        android:layout_marginTop="10dp"
+                        android:textAllCaps="false"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
