--- a/NotariusApp/app/src/main/res/layout/settings.xml
+++ b/NotariusApp/app/src/main/res/layout/settings.xml
@@ -34,14 +34,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:weightSum="1"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.6"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_weight="0.6"
             android:gravity="center|left"
             android:padding="10dp"
             android:text="@string/notification_on_off"
@@ -51,9 +51,9 @@
         <ToggleButton
             android:id="@+id/toggleButton"
             android:layout_width="0dp"
-            android:layout_weight="0.2"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_weight="0.2"
             android:checked="false" />
 
     </LinearLayout>
@@ -62,41 +62,55 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:gravity="center"
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
-        android:weightSum="1"
-        android:orientation="horizontal">
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
+            android:layout_weight="0.5"
             android:gravity="center|left"
-            android:padding="10dp"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dp"
             android:text="@string/frequency"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
         <TextView
-            android:layout_width="0dp"
-            android:layout_weight="0.4"
-            android:layout_marginTop="10dp"
-            android:textColor="@android:color/black"
-            android:text="Everyday"
-            android:textSize="18sp"
-            android:layout_marginLeft="10dp"
-            android:gravity="center"
-            android:padding="10dp"
-            android:layout_gravity="center_horizontal"
             android:id="@+id/frequencySpinner"
-            android:layout_height="wrap_content">
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_weight="0.4"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:paddingLeft="10dp"
+            android:text="Everyday"
+            android:textColor="@android:color/black"
+            android:textSize="18sp"/>
 
-        </TextView>
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/frequencyText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginLeft="28dp"
+        android:gravity="center|left"
+        android:paddingLeft="10dp"
+        android:text=""
+        android:visibility="gone"
+        android:textColor="#92000000"
+        android:textSize="14sp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -104,16 +118,16 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="28dp"
         android:layout_marginTop="10dp"
-        android:weightSum="1"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <TextView
             android:layout_width="0dp"
-            android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
+            android:layout_weight="0.5"
             android:gravity="center|left"
             android:padding="10dp"
             android:text="Time of Day"
@@ -121,14 +135,14 @@
             android:textSize="18sp" />
 
         <TextView
+            android:id="@+id/timeTv"
             android:layout_width="0dp"
-            android:layout_weight="0.5"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
+            android:layout_weight="0.5"
             android:gravity="center"
             android:padding="10dp"
-            android:id="@+id/timeTv"
             android:text="20:00 PM"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
