--- a/NotariusApp/app/src/main/res/layout/settings.xml
+++ b/NotariusApp/app/src/main/res/layout/settings.xml
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:weightSum="1">
 
         <TextView
@@ -92,7 +93,7 @@
             android:gravity="center"
             android:paddingTop="10dp"
             android:paddingLeft="10dp"
-            android:text="Everyday"
+            android:text="Never"
             android:textColor="@android:color/black"
             android:textSize="18sp"/>
 
