--- a/NotariusApp/app/src/main/res/layout/settings.xml
+++ b/NotariusApp/app/src/main/res/layout/settings.xml
@@ -66,11 +66,11 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:weightSum="1">
 
         <TextView
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="10dp"
@@ -84,13 +84,11 @@
 
         <TextView
             android:id="@+id/frequencySpinner"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
             android:layout_weight="0.4"
-            android:gravity="center"
+            android:gravity="center|left"
             android:paddingTop="10dp"
             android:paddingLeft="10dp"
             android:text="Never"
@@ -117,7 +115,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="28dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:orientation="horizontal"
