--- a/NotariusApp/app/src/main/res/layout/popup_box.xml
+++ b/NotariusApp/app/src/main/res/layout/popup_box.xml
@@ -12,6 +12,16 @@
     <!--android:layout_weight="1"-->
     <!--/>-->
     <!-- -->
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:text="Repeat"
+        android:textColor="#000000"
+        android:textSize="22sp"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -163,8 +173,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:visibility="invisible"
-        android:padding="10dp">
+        android:padding="10dp"
+        android:visibility="gone">
 
         <TextView
             android:layout_width="0dp"
@@ -181,10 +191,34 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/dismissBtn"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Ok" />
+        android:orientation="horizontal"
+        android:padding="10dp"
+        android:gravity="center|right"
+        android:visibility="visible">
+
+        <TextView
+            android:id="@+id/dismissBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:padding="5dp"
+            android:textColor="#0ae0ff"
+            android:textSize="20sp"
+            android:layout_marginRight="15dp"
+            android:text="Cancel" />
+
+        <TextView
+            android:id="@+id/okBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:textColor="#00dfff"
+            android:textSize="20sp"
+            android:padding="5dp"
+            android:text="OK" />
+
+    </LinearLayout>
 </LinearLayout>
